# ml_workloads

./: .gitignore
acl/: Dockerfile  Makefile  sbgemm.cpp  sgemm.cpp  utils.hpp
hpc/: README.md  fp_limits.cpp
hpc/assembly/: main.cpp  test1.s
intrinsic/: test1.cpp
numpy/: matmul.py
onednn/: CMakeLists.txt  Dockerfile  run.sh  sgemm.cpp  utils.hpp
onednn/openmp/: test1.cpp
onnxruntime/: run_resnet50.py  test1.py
openblas/: CMakeLists.txt  Dockerfile  Makefile  amx_example.cpp  build.sh  compare_sgemm_sbgemm.cpp  gemm_amx.cpp  sbgemm.cpp  sgemm.cpp  test_amxtile.cpp  utils.cpp  utils.h  utils.hpp
protobuf/tensor/: tensor.proto  tensor_pb2.py  test.py
protobuf/test1/: test.py  todolist.proto
pytorch/: sample.py
pytorch/basic/: matmul.py  test1.py
pytorch/benchmarks/: bert.py  bert_ipex.py  check_pred.py  gpt2.py  gpt2_ipex.py  resnet.py  resnet_ipex.py
pytorch/check_results/: compare.sh  gpt2.py
pytorch/docker/: Dockerfile.arm64  Dockerfile.arm64-devel  Dockerfile.openblas  Dockerfile.x86-devel  Dockerfile.x86_devel
pytorch/gpt2/: model_detail.py  test.py
pytorch/llm/: benchmark.py  bert.py  bert2.py  blade.py  gpt2.py  show_model.py  test.py
pytorch/operator/: softmax.py
pytorch/pt_compile_debug/: conv_add_fusion.py  conv_bn_act.py  gpt2mlp.py  inductor.py  linear.py  test.py
pytorch/resnet/: blade.py  compare_results.py  dockerfile.benchmark  dynamo.py  ipex_infer.py  ipex_jit_infer.py  jit_infer.py  normal_infer.py  test.py  utils.py
pytorch_opt/: benchmark.py  readme.md  run.sh
pytorch_opt/docker/: Dockerfile.opt_base  (+1 more)
(+12 files in other folders)
